# PTAHomework

./: .gitignore  CMakeLists.txt  temp.c  temp.cpp
.cache/clangd/index/: PID.cpp.F835E26D5C212CE7.idx  PID.hpp.181848A13BFCCAEB.idx  Perspective.cpp.5D394114082080B7.idx  StateMachine.cpp.33CE58935AFD637A.idx  StateMachine.hpp.537053BA529B5486.idx  temp.c.69EAE474F64ED40E.idx  temp.cpp.B00CE3F74E782508.idx
src/1-SequenceList/: threeNum.cpp
src/2-LinkList/: 2-7-1_LinkListReverseFind.cpp  2-7-2_LinkListsIntersection.cpp  2-7-3_(c++ STL method).cpp  2-7-3_LinkListRemoveDuplicate.cpp  2-7-4_(STL version).cpp  2-7-4_LinkListReArrangement.cpp  TopicRequirement.md
src_DS/3-Stack/: 3-7-3_NifixExpressionCalculation.cpp  3-7-6_StackOperationValidity.cpp
src_DS/4-Queue/: 4-7-3_HanoiProblem.cpp
src_DS/4-Queue/lib/: Queue.h
src_DS/5-String/: 5-7-1_StringAlgorithm.cpp  5-7-2_VirusDetection.cpp
src_DS/5-String/lib/: MyString.cpp
src_DS/6-Arrays&GeneralizedList/: 6-7-1_TripleTranspose.cpp  6-7-2_TripleAdd.cpp
src_DS/7-BinaryTree/: 7-7-1_TreeNodeReverse.cpp  Requirement.md
src_DS/8-Graph/: 8-6-3_GraphOnList.cpp  8-6-5-2_[CppAdvancedVersion].cpp
src_PTA/3-Stack/: 3-7-1_StackNumberSystemConvert.cpp  3-7-2_SymbolPairing.cpp  3-7-3_NifixExpressionCalculation.cpp  3-7-4_NifixExpressionConvertion.cpp  3-7-5_Palindrome.cpp  3-7-7_SimpleCalculator.cpp  Requirement.md
src_PTA/4-Queue/: 4-7-1_SuperStairs.cpp  4-7-2_RecursiveReverseOutput.cpp  4-7-3_HanoiProblem.cpp  4-7-4_LinkLiskMultiplies.cpp  4-7-5_JosephProblem.cpp  Requirement.md
src_PTA/4-Queue/lib/: Queue.cpp  Queue.h
src_PTA/5-String/: 5-6-1_KMP.cpp  Requirement.md  requirement.md
src_PTA/5-String/lib/: String.cpp  String.h
src_PTA/6-Arrays&GeneralizedList/: Requirement.md
src_PTA/7-BinaryTree/: 7-6-1_IterateInOrderSearchBinaryTree.cpp  7-7-3.cpp  7-7-4.cpp  Requirement.md
src_PTA/8-Graph/: 8-6-1_InDegreeOnMatrix.cpp  8-6-2_DegreeOnMatrix.cpp  8-6-4_GraphOnMatrix.cpp  8-6-5_MinimalSpanningTree.cpp  Requirement.md
src_PTA/C/: gcd_with_lcm.cpp
tech-try/: Perspective.cpp
tech-try/Http/: HttpServer.cpp  HttpServer.hpp  main.cpp
tech-try/Http/res/www/: index.html
tech-try/PID/: PID.cpp  PID.hpp  PIDDemo.cpp
tech-try/StateMachine/: README.md  StateMachine.cpp  StateMachine.hpp
